2014-02-12  Brady Eidson  <beidson@apple.com>

        Cleanup mac/mac-wk1/mac-wk2 TestExpectations a little bit
        https://bugs.webkit.org/show_bug.cgi?id=128679

        Reviewed by Alexey Proskuryakov.

        * platform/mac-wk1/TestExpectations: mac-wk1 specific disables should go here.
        * platform/mac-wk2/TestExpectations: Remove unnecessary re-enabling, and simplify indexeddb/mozilla.
        * platform/mac/TestExpectations: Move some tests from here to mac-wk1.

2014-02-12  Alexey Proskuryakov  <ap@apple.com>

        Wrap WebCrypto keys in SerializedScriptValue
        https://bugs.webkit.org/show_bug.cgi?id=128680

        Reviewed by Anders Carlsson.

        * crypto/subtle/rsa-indexeddb-expected.txt: Added.
        * crypto/subtle/rsa-indexeddb.html: Added.
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac-wk1/TestExpectations:
        * platform/win/TestExpectations:
        * platform/wincairo/TestExpectations:

2014-02-12  Brendan Long  <b.long@cablelabs.com>

        Implement DataCue for metadata cues
        https://bugs.webkit.org/show_bug.cgi?id=128402

        Reviewed by Eric Carlson.

        * js/dom/global-constructors-attributes-expected.txt: Add DataCue.
        * media/track/track-datacue-expected.txt: Added.
        * media/track/track-datacue.html: Added.
        * platform/efl/js/dom/global-constructors-attributes-expected.txt: Add DataCue.
        * platform/gtk-wk2/js/dom/global-constructors-attributes-expected.txt: Same.
        * platform/gtk/js/dom/global-constructors-attributes-expected.txt: Same.
        * platform/mac/js/dom/global-constructors-attributes-expected.txt: Same.
        * platform/mac-mountainlion/js/dom/global-constructors-attributes-expected.txt: Same.
        * platform/win/js/dom/global-constructors-attributes-expected.txt: Same.

2014-02-12  Brady Eidson  <beidson@apple.com>

        Add a mac-wk1 platform directory and TestExpectations file